nivasa-macros/tests/trybuild/graphql_invalid_interceptor_marker.rs
use nivasa_macros::resolver;

struct GraphqlGateway;

impl GraphqlGateway {
    /// nivasa-interceptor:
    #[resolver("users")]
    fn users(&self) {}
}

fn main() {}
